Version 1.5106:
- Add standard tests

Version 1.5105: Sat May 2 2015
- Prevent CPAN from indexing private-lib

Version 1.5104: Mon Apr 20 2015
- Remove unused File::Cat import

Version 1.5103: Mon Apr 20 2015
- Add File::Path dependency for testing. Thanks to Paul Howarth
  <paul@city-fan.org> for the info.
  https://rt.cpan.org/Ticket/Display.html?id=103482
- Don't install private Module::Install extension. Thanks to Paul Howarth
  <paul@city-fan.org> for the bug report.
  https://rt.cpan.org/Ticket/Display.html?id=103482
- Clarify licensing terms
- Move verbose testing to a private module, and implement it in a way that
  doesn't require editing the Makefile after it is generated.
- Require File::Slurp instead of including it, to avoid potential problems
  like this:
  http://www.cpantesters.org/cpan/report/86a0145a-e52b-11e4-a1d1-8536eb4f9f07
- Improve the ability of the test suite to be run in parallel
- Fix Windows test incompatibilities, such as:
  http://www.cpantesters.org/cpan/report/12187014-af8d-1014-92d8-fdf72a825c07
  http://www.cpantesters.org/cpan/report/12187014-af8d-1014-92d8-fdf72a825c07

Version 1.5102: Sun Apr 12 2015
- Fix xz and lzip test skip for when tools are not installed
- Enable verbose testing for CPAN-testers
- Use proper temp dir instead of t/temp
- Consolidate issue tracking at rt.cpan.org

Version 1.5101: Sat Apr 4 2015
- Add a version check for lzip, to make sure the .lz file can be decompressed
  properly during testing. Thanks to Paul Howarth <paul@city-fan.org> for the
  suggestion.
- Fix warning about deleting nonexistent test cache
- Enhance "make test TEST_VERBOSE=1" to dump debug information
- Work around a POD-stripping bug that would cause module load to fail on some
  platforms

Version 1.5100: Sun Mar 22 2015
- Moved code to github
- Added xz support.
  https://rt.cpan.org/Ticket/Display.html?id=68286
  Thanks to sascha@trimind.de for initial patches.
- Added lzip support.
  Thanks to an anonymous submitter for the idea.