@@ -1,5 +1,8 @@
 Version 1.5106:
 - Add standard tests
+- Detect mailboxes that contain a mix of newline types. Complain about it, but
+  also allow the force option to continue processing. Thanks to Pali Rohár
+  <pali.rohar@gmail.com> for the bug report.
 
 Version 1.5105: Sat May 2 2015
 - Prevent CPAN from indexing private-lib
